<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bridge</string>
    <string name="create_device">Create a Device</string>

    <string name="menu_pref">Preferences</string>
    <string name="menu_save">Save</string>
    <string name="menu_refresh">Refresh Devices</string>

    <string name="pref_server_category">Server Information</string>
    <string name="pref_server">Server Address</string>
    <string name="pref_server_summary">Set address of the bridge server.</string>
    <string name="pref_port">Server Port</string>

    <string name="pref_user_category">User Information</string>
    <string name="pref_user">Username</string>
    <string name="pref_password">Password</string>

    <string name="pref_app_category">Application Settings</string>
    <string name="pref_auto_refresh">Refresh Automatically</string>
    <string name="pref_auto_refresh_interval">Miliseconds Between Refreshes</string>

    <string name="disconnected"></string>

    <string name="save_dialog_title">Save</string>
    <string name="save_dialog_save">Save</string>
    <string name="save_dialog_cancel">Cancel</string>
</resources>
