<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_server_category">
        <EditTextPreference
            android:key="pref_server"
            android:title="@string/pref_server"
            android:summary="@string/pref_server_summary"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_port"
            android:title="@string/pref_port"
            android:defaultValue="8080"
            android:numeric="integer" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_app_category">
        <CheckBoxPreference
            android:key="pref_auto_refresh"
            android:title="@string/pref_auto_refresh"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="pref_auto_refresh_interval"
            android:title="@string/pref_auto_refresh_interval"
            android:defaultValue="4000"
            android:numeric="integer" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_user_category">
        <EditTextPreference
            android:key="pref_user"
            android:title="@string/pref_user" />
        <EditTextPreference
            android:key="pref_password"
            android:title="@string/pref_password"
            android:inputType="textPassword" />
    </PreferenceCategory>
</PreferenceScreen>
